--- a/framework/css/navigation_controller.css
+++ b/framework/css/navigation_controller.css
@@ -46,6 +46,7 @@ ons-navigator {
     align-items: stretch;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .navigator-toolbar {
@@ -61,6 +62,7 @@ ons-navigator {
     -webkit-align-self: auto;
     -ms-flex-item-align: auto;
     align-self: auto;
+    overflow: hidden;
 }
 
 
@@ -72,11 +74,7 @@ ons-navigator {
     border-bottom: 1px solid lightgray;;
 }
 
-.content {    
-    position: absolute;
-    top: 0;
-    bottom: 0;        
-    left:0;
-    right: 0;
-    overflow: hidden;
+#right-section-icon {
+    min-height: 40px;
+    display: block;
 }
